2000-01-30  Federico Mena Quintero  <federico@helixcode.com>

	* evolution-calendar.idl: Changed the namespace from
	GNOME::Calendar to Evolution::Calendar.
	(Listener::LoadStatus): Fixed SUCESSS -> SUCCESS typo.  And I
	never noticed it in the implementation.  Ain't M-/ grand?

	* Makefile.am: Changed ocurrences of gnome-calendar.idl to
	evolution-calendar.idl.

	* *.[ch]: Changed GNOME_Calendar_foo identifiers to
	Evolution_Calendar_foo.

2000-01-25  Federico Mena Quintero  <federico@helixcode.com>

	* cal-client.c cal-client.h: New files with the calendar client
	object.

2000-01-25  Federico Mena Quintero  <federico@helixcode.com>

	* cal-factory.c (CalFactory_load): Check that the listener is not
	nil and emit and exception if it is.

	* gnome-calendar.idl (CalFactory::load CalFactory::create): Now
	these raise the NilListener exception.

	* tlacuache.c (calendar_notify): Error stub for alarms.
	(alarm_defaults): Stub array.
	(debug_alarms): Stub variable.
	(main): Initialize gnome-vfs.

2000-01-24  Federico Mena Quintero  <federico@helixcode.com>

	* tlacuache.c: New main module for the Tlacuache personal calendar
	server.

	* tlacuache.gnorba: New gnorba file for Tlacuache, the GNOME
	personal calendar server.

	* Makefile.am: Added the stuff necessary to build Tlacuache.

	* cal.c (Cal_get_uri): Convert the URI to a string before
	returning it.

	* cal-factory.c (CalFactory_create): Doh, this function is void.

	* job.c (job_add): Use g_idle_add(), not gtk_idle_add().

2000-01-24  Federico Mena Quintero  <federico@helixcode.com>

	* cal-backend.c (cal_backend_remove_cal): New function to remove a
	calendar client interface object from a backend.
	(cal_backend_load): Convert the URI to string and use
	Parse_MIME_FromFileName().  The conversion is not very smart,
	though.

	* cal-factory.c (load_backend): Moved most of the error handling
	upstream to load_fn().
	(load_fn): Handle failure in case the backend could not be loaded.